--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node build/server.js",
+    "migrate": "knex --knexfile build/config/knexfile.js migrate:latest",
+    "seed": "knex --knexfile build/config/knexfile.js seed:run",
+    "build": "rimraf build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "dev:seed": "knex --knexfile src/config/knexfile.ts seed:run",
@@ -27,6 +31,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
+    "rimraf": "^3.0.2",
     "sqlite3": "^5.0.0",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
