--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,8 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "sweetalert2": "^10.3.5",
+    "swr": "^0.3.4",
     "typescript": "^3.7.5"
   },
   "scripts": {
